# infra

./: .gitignore  .sops.yaml  README.md  justfile  pyproject.toml  terragrunt.hcl
ansible/: ansible.cfg
ansible/inventories/vm/: hosts
ansible/inventories/vm/group_vars/vm/: main.yaml
ansible/plays/: vm.yml
ansible/plugins/inventory/: terraform.py
ansible/roles/bootstrap/: README.md
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/tasks/: firewall.yml  main.yml  mount_disk.yml
ansible/roles/bootstrap/vars/: main.yml
ansible/roles/localhost-ssh/: README.md
ansible/roles/localhost-ssh/defaults/: main.yml
ansible/roles/localhost-ssh/tasks/: main.yml
ansible/roles/microk8s/: README.md
ansible/roles/microk8s/defaults/: main.yml
ansible/roles/microk8s/handlers/: main.yml
ansible/roles/microk8s/tasks/: main.yml
ansible/roles/microk8s/vars/: main.yml
docker/: postgres-backuper.dockerfile
modules/k8s_cert_manager/: main.tf  variables.tf
modules/k8s_cert_manager/charts/cert-manager/: Chart.yaml  values.yaml
modules/k8s_cert_manager/charts/cert-manager/templates/: _helpers.tpl  (+2 more)
modules/k8s_ingress_nginx/: main.tf  variables.tf
modules/k8s_postgres/: main.tf  output.tf  variables.tf
modules/k8s_postgres_backuper/: main.tf  variables.tf
modules/k8s_postgres_backuper/charts/postgres-backuper/: Chart.yaml  README.md  values.yaml
modules/k8s_redis/: main.tf  output.tf  variables.tf
terraform/: .terraform.lock.hcl  ansible.tf  k8s.tf  main.sops.yaml  main.tf  terraform.tf  tfstate.sops.json
terraform/files/: kubeconfig
(+3 files in other folders)
